// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-reliability - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and improve the reliability posture of Azure Functions: zone redundancy, ZRS storage, health probes, multi-region failover. Scans deployed resources, presents a feature-pivoted checklist, then drives staged remediation (CLI or IaC patches) end-to-end with user confirmation. WHEN: "assess reliability", "check reliability", "zone redundant", "multi-region failover", "high availability", "disaster recovery", "single points of failure", "reliability posture".",
  "extractedKeywords": [
    "app service",
    "assess",
    "authentication",
    "availability",
    "azure",
    "bicep",
    "check",
    "checklist",
    "cli",
    "confirmation",
    "container",
    "deploy",
    "deployed",
    "disaster",
    "drives",
    "end-to-end",
    "failover",
    "failure",
    "feature-pivoted",
    "function",
    "functions",
    "health",
    "high",
    "improve",
    "mcp",
    "monitor",
    "multi-region",
    "patches",
    "points",
    "posture",
    "presents",
    "probes",
    "recovery",
    "redundancy",
    "redundant",
    "reliability",
    "remediation",
    "resources",
    "scans",
    "single",
    "staged",
    "storage",
    "terraform",
    "then",
    "user",
    "validation",
    "when",
    "with",
    "zone",
  ],
  "name": "azure-reliability",
}
`;

exports[`azure-reliability - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "assess",
  "authentication",
  "availability",
  "azure",
  "bicep",
  "check",
  "checklist",
  "cli",
  "confirmation",
  "container",
  "deploy",
  "deployed",
  "disaster",
  "drives",
  "end-to-end",
  "failover",
  "failure",
  "feature-pivoted",
  "function",
  "functions",
  "health",
  "high",
  "improve",
  "mcp",
  "monitor",
  "multi-region",
  "patches",
  "points",
  "posture",
  "presents",
  "probes",
  "recovery",
  "redundancy",
  "redundant",
  "reliability",
  "remediation",
  "resources",
  "scans",
  "single",
  "staged",
  "storage",
  "terraform",
  "then",
  "user",
  "validation",
  "when",
  "with",
  "zone",
]
`;
